--- a/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
+++ b/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
@@ -2,7 +2,7 @@
 [id="adding-vs-code-extensions"]
 = Adding `VS Code` extensions
 
-To have the Microsoft Visual Studio Code - Open Source IDE automatically install chosen extensions, you have to add an `extensions.json` file to the remote Git repository that contains your project source code and that will be cloned into workspaces.
+To have the Microsoft Visual Studio Code - Open Source IDE automatically install chosen extensions, you can add an `extensions.json` file to the remote Git repository that contains your project source code and that will be cloned into workspaces.
 
 .Prerequisites
 * {prod-short} has network access to the link:https://www.open-vsx.org/[OpenVSX registry].
@@ -24,13 +24,14 @@ To install recommended extensions in a restricted environment, consider these op
 
 .. Find the extension on the link:https://www.open-vsx.org/[Open VSX registry website] and open the extension's listing page.
 
-.. Right-click btn:[DOWNLOAD] and copy its URL.
-+
-If right-clicking does not allow you to copy the URL, left-click btn:[DOWNLOAD] and right-click any of the version links in the drop-down list and copy its URL.
+.. Right-click btn:[DOWNLOAD] and copy its URL. If right-clicking does not allow you to copy the URL, left-click btn:[DOWNLOAD] and right-click any of the version links in the drop-down list and copy its URL.
 
 .. Extract the __<publisher>__ and __<extension>__ names from the copied URL:
 +
-`pass:c,m,a,q[https://open-vsx.org]/.../file/__<publisher>__.__<extension>__-__<version>__.vsix`
+[subs="+quotes"]
+----
+https://open-vsx.org/.../file/__<publisher>__.__<extension>__-__<version>__.vsix
+----
 
 . Create a `.vscode/extensions.json` file in the remote Git repository.
 
