--- a/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
@@ -6,7 +6,7 @@
 
 [id="troubleshooting-webview-loading-error"]
 
-= Troubleshooting Webview loading error
+= Troubleshooting webview loading error
 
 pass:[<!-- vale RedHat.Spelling = NO -->]
 
@@ -15,7 +15,7 @@ If you use Microsoft Visual Studio Code - Open Source in a private browsing wind
 
 [WARNING]
 ====
-Mozilla Firefox Private Browsing mode link:https://bugzilla.mozilla.org/show_bug.cgi?id=1320796[does not support ServiceWorkers] necessary for Microsoft Visual Studio Code - Open Source to load Webviews. There is no workaround available.
+Mozilla Firefox Private Browsing mode link:https://bugzilla.mozilla.org/show_bug.cgi?id=1320796[does not support ServiceWorkers] necessary for Microsoft Visual Studio Code - Open Source to load webviews. There is no workaround available.
 ====
 
 .Fixing Webview loading error in Google Chrome Incognito mode
