--- a/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -45,15 +45,13 @@ include::example$snip_{project-context}-steps-to-add-or-remove-extensions-in-ope
 
 . Get the publisher and extension names of each chosen extension:
 
-.. Find the extension on the link:https://www.open-vsx.org/[Open VSX registry website] and open the extension's listing page.
-
-.. Right-click btn:[DOWNLOAD] and copy its URL. If right-clicking does not allow you to copy the URL, left-click btn:[DOWNLOAD] and right-click any of the version links in the drop-down list and copy its URL.
+.. Find the extension on the link:https://www.open-vsx.org/[Open VSX registry website] and copy the URL of the extension's listing page.
 
 .. Extract the __<publisher>__ and __<extension>__ names from the copied URL:
 +
 [subs="+quotes"]
 ----
-https://open-vsx.org/.../file/__<publisher>__.__<extension>__-__<version>__.vsix
+https://www.open-vsx.org/extension/__<publisher>__/__<extension>__
 ----
 
 . To add extensions, add the publisher and extension names to the `openvsx-sync.json` file. To remove extensions, remove the publisher and extension names from the `openvsx-sync.json` file. Use the following JSON syntax:
