--- a/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
+++ b/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
@@ -22,15 +22,15 @@ To install recommended extensions in a restricted environment, consider these op
 
 . Get the publisher and extension names of each chosen extension:
 
-.. Find the extension on the link:https://www.open-vsx.org/[Open VSX registry website] and open the extension's listing page.
-
-.. Right-click btn:[DOWNLOAD] and copy its URL. If right-clicking does not allow you to copy the URL, left-click btn:[DOWNLOAD] and right-click any of the version links in the drop-down list and copy its URL.
+.. Find the extension on the link:https://www.open-vsx.org/[Open VSX registry website] and copy the URL of the extension's listing page.
 
 .. Extract the __<publisher>__ and __<extension>__ names from the copied URL:
 +
 [subs="+quotes"]
 ----
-https://open-vsx.org/.../file/__<publisher>__.__<extension>__-__<version>__.vsix
+https://www.open-vsx.org/extension/__<publisher>__/__<extension>__
+----
+
 ----
 
 . Create a `.vscode/extensions.json` file in the remote Git repository.
