--- a/modules/end-user-guide/pages/url-parameter-for-the-ide.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-ide.adoc
@@ -7,7 +7,7 @@
 [id="url-parameter-for-the-ide"]
 = URL parameter for the IDE
 
-The URL parameter for specifying a supported IDE is `che-editor=`. You can use it to start a workspace with a clone of the same project repository and your choice of a supported IDE.
+You can use the `che-editor=` URL parameter to specify a supported IDE when starting a workspace.
 
 TIP: Use the `che-editor=` parameter when you cannot add or edit a xref:defining-a-common-ide.adoc[`/.che/che-editor.yaml`] file in the source-code Git repository to be cloned for workspaces.
 
