--- a/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -15,7 +15,7 @@ pass:[<!-- vale RedHat.TermsErrors = YES -->]
 
 .Prerequisites
 
-* Chosen extensions are published on link:https://open-vsx.org[open-vsx.org].
+* The chosen extensions are published on link:https://open-vsx.org[open-vsx.org].
 +
 [TIP]
 ====
@@ -41,8 +41,6 @@ pass:[<!-- vale RedHat.TermsErrors = YES -->]
 
 .Procedure
 
-include::example$snip_{project-context}-steps-to-add-or-remove-extensions-in-openvsx-sync-json.adoc[]
-
 . Get the publisher and extension names of each chosen extension:
 
 .. Find the extension on the link:https://www.open-vsx.org/[Open VSX registry website] and copy the URL of the extension's listing page.
@@ -54,7 +52,11 @@ include::example$snip_{project-context}-steps-to-add-or-remove-extensions-in-ope
 https://www.open-vsx.org/extension/__<publisher>__/__<extension>__
 ----
 
-. To add extensions, add the publisher and extension names to the `openvsx-sync.json` file. To remove extensions, remove the publisher and extension names from the `openvsx-sync.json` file. Use the following JSON syntax:
+include::example$snip_{project-context}-steps-to-add-or-remove-extensions-in-openvsx-sync-json.adoc[]
+
+** To add extensions, add the publisher and extension names to the `openvsx-sync.json` file.
+** To remove extensions, remove the publisher and extension names from the `openvsx-sync.json` file.
+** Use the following JSON syntax:
 +
 [source,json,subs="+quotes"]
 ----
