--- a/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -13,32 +13,6 @@ TIP: To get the latest security fixes after a {prod-short} update, rebuild your 
 
 pass:[<!-- vale RedHat.TermsErrors = YES -->]
 
-.Prerequisites
-
-* The chosen extensions are published on link:https://open-vsx.org[open-vsx.org].
-+
-[TIP]
-====
-
-* If the extension is only available from link:https://marketplace.visualstudio.com/VSCode[Microsoft Visual Studio Marketplace], but not link:https://open-vsx.org[Open VSX], you can ask the extension publisher to also publish it on link:https://open-vsx.org[open-vsx.org] according to these link:https://github.com/eclipse/openvsx/wiki/Publishing-Extensions#how-to-publish-an-extension[instructions], potentially using this link:https://github.com/marketplace/actions/publish-vs-code-extension[GitHub action].
-
-* If the extension publisher is unavailable or unwilling to publish the extension to link:https://open-vsx.org[open-vsx.org], and if there is no Open VSX equivalent of the extension, consider link:https://github.com/open-vsx/publish-extensions/issues[reporting an issue] to the Open VSX team.
-
-* If you have a closed-source extension or an extension developed only for internal use in your organization, you can add the extension directly from a `.vsix` file by using a URL accessible to your custom plugin registry container:
-+
-[source,json,subs="+quotes"]
-----
-    {
-        "id": "__<publisher>__.__<extension>__",
-        "download": "__<url_to_download_vsix_file>__",
-        "version": "__<extension_version>__"
-    }
-----
-
-* Read the link:https://aka.ms/vsmarketplace-ToU[Terms of Use] for the link:https://marketplace.visualstudio.com/VSCode[Microsoft Visual Studio Marketplace] before using its resources.
-
-====
-
 .Procedure
 
 . Get the publisher and extension names of each chosen extension:
@@ -51,6 +25,15 @@ pass:[<!-- vale RedHat.TermsErrors = YES -->]
 ----
 https://www.open-vsx.org/extension/__<publisher>__/__<extension>__
 ----
++
+[TIP]
+====
+
+If the extension is only available from link:https://marketplace.visualstudio.com/VSCode[Microsoft Visual Studio Marketplace], but not link:https://open-vsx.org[Open VSX], you can ask the extension publisher to also publish it on link:https://open-vsx.org[open-vsx.org] according to these link:https://github.com/eclipse/openvsx/wiki/Publishing-Extensions#how-to-publish-an-extension[instructions], potentially using this link:https://github.com/marketplace/actions/publish-vs-code-extension[GitHub action].
+
+If the extension publisher is unavailable or unwilling to publish the extension to link:https://open-vsx.org[open-vsx.org], and if there is no Open VSX equivalent of the extension, consider link:https://github.com/open-vsx/publish-extensions/issues[reporting an issue] to the Open VSX team.
+
+====
 
 include::example$snip_{project-context}-steps-to-add-or-remove-extensions-in-openvsx-sync-json.adoc[]
 
@@ -66,6 +49,24 @@ include::example$snip_{project-context}-steps-to-add-or-remove-extensions-in-ope
 ----
 +
 TIP: The latest extension version on link:https://open-vsx.org[open-vsx.org] is the default. Alternatively, you can add `"version": "__<extension_version>__"` on a new line to specify a version.
++
+[NOTE]
+====
+
+If you have a closed-source extension or an extension developed only for internal use in your organization, you can add the extension directly from a `.vsix` file by using a URL accessible to your custom plugin registry container:
++
+[source,json,subs="+quotes"]
+----
+    {
+        "id": "__<publisher>__.__<extension>__",
+        "download": "__<url_to_download_vsix_file>__",
+        "version": "__<extension_version>__"
+    }
+----
+
+Read the link:https://aka.ms/vsmarketplace-ToU[Terms of Use] for the link:https://marketplace.visualstudio.com/VSCode[Microsoft Visual Studio Marketplace] before using its resources.
+
+====
 
 . Build the plugin registry container image and publish it to a container registry like link:https://quay.io/[quay.io]:
 
