--- a/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
+++ b/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
@@ -11,7 +11,7 @@ The {prod-short} build of link:https://github.com/microsoft/vscode[Microsoft Vis
 
 You can have extensions automatically installed in this IDE for workspaces, as explained in the next section, from the xref:administration-guide:extensions-for-microsoft-visual-studio-code-open-source.adoc[Open VSX registry].
 
-TIP: You can use the link:https://code.visualstudio.com/api/ux-guidelines/command-palette[Command Palette] to find and run the commands specified in `devfile.yaml`.
+TIP: You can use link:https://code.visualstudio.com/Docs/editor/tasks[Tasks] to find and run the commands specified in `devfile.yaml`.
 
 [TIP]
 ====
