--- a/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
@@ -17,21 +17,19 @@ This is a known issue affecting following browsers:
 * Google Chrome in Incognito mode
 * Mozilla Firefox in Private Browsing mode
 
-[WARNING]
-====
-Mozilla Firefox Private Browsing mode link:https://bugzilla.mozilla.org/show_bug.cgi?id=1320796[does not support ServiceWorkers] necessary for Microsoft Visual Studio Code - Open Source to load webviews. There is no workaround available.
-====
-
-.Fixing Webview loading error in Google Chrome Incognito mode
-
-Change the cookie settings in Google Chrome to fix the issue.
-
-.Procedure
-
-. Open *Settings*.
-. Select *Privacy and security*.
-. Click *Cookies and other site data*.
-. Select *Allow all cookies*.
+.Dealing with the webview error in a private browsing window
+[cols="25h,~"]
+|===
+| Browser | Workarounds
+| Google Chrome
+|
+* Go to *Settings* -> *Privacy and security* -> *Cookies and other site data* -> *Allow all cookies*.
+* Do not use Incognito mode.
+| Mozilla Firefox
+|
+* Do not use Private Browsing mode.
+* See link:https://bugzilla.mozilla.org/show_bug.cgi?id=1320796[Bug 1320796: Support ServiceWorkers in Private Browsing Mode].
+|===
 
 pass:[<!-- vale RedHat.Spelling = YES -->]
 
