--- a/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
@@ -6,9 +6,8 @@
 
 [id="troubleshooting-webview-loading-error"]
 
-= Troubleshooting webview loading error
-
 pass:[<!-- vale RedHat.Spelling = NO -->]
+= Troubleshooting webview loading error
 
 If you use Microsoft Visual Studio Code - Open Source in a private browsing window, you might encounter the following error message: *Error loading webview: Error: Could not register service workers*.
 
@@ -17,18 +16,18 @@ This is a known issue affecting following browsers:
 * Google Chrome in Incognito mode
 * Mozilla Firefox in Private Browsing mode
 
+
 .Dealing with the webview error in a private browsing window
 [cols="25h,~"]
 |===
 | Browser | Workarounds
 | Google Chrome
 |
-* Go to *Settings* -> *Privacy and security* -> *Cookies and other site data* -> *Allow all cookies*.
-* Do not use Incognito mode.
+| Go to *Settings* -> *Privacy and security* -> *Cookies and other site data* -> *Allow all cookies*.
+
 | Mozilla Firefox
 |
-* Do not use Private Browsing mode.
-* See link:https://bugzilla.mozilla.org/show_bug.cgi?id=1320796[Bug 1320796: Support ServiceWorkers in Private Browsing Mode].
+| Webviews are not supported in Private Browsing mode. See link:https://bugzilla.mozilla.org/show_bug.cgi?id=1320796[this reported bug] for details.
 |===
 
 pass:[<!-- vale RedHat.Spelling = YES -->]
