--- a/modules/end-user-guide/partials/proc_automating-installation-of-microsoft-visual-studio-code-extensions-at-workspace-startup.adoc
+++ b/modules/end-user-guide/partials/proc_automating-installation-of-microsoft-visual-studio-code-extensions-at-workspace-startup.adoc
@@ -1,6 +1,6 @@
 
-[id="automating-installation-of-vs-code-extensions-at-workspace-startup"]
-= Automating installation of VS Code extensions at workspace startup
+[id="automating-installation-of-microsoft-visual-studio-code-extensions-at-workspace-startup"]
+= Automating installation of Microsoft Visual Studio Code extensions at workspace startup
 
 To have the Microsoft Visual Studio Code - Open Source IDE automatically install chosen extensions, you can add an `extensions.json` file to the remote Git repository that contains your project source code and that will be cloned into workspaces.
 
