--- a/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
@@ -1,7 +1,7 @@
 :_content-type: PROCEDURE
-:description: Troubleshooting Webview loading error
+:description: Troubleshooting webview loading error
 :keywords: user-guide, troubleshooting-webview-loading-error
-:navtitle: Troubleshooting Webview loading error
+:navtitle: Troubleshooting webview loading error
 :page-aliases: .:troubleshooting-webview-loading-error.adoc
 
 [id="troubleshooting-webview-loading-error"]
