--- a/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
@@ -6,8 +6,9 @@
 
 [id="troubleshooting-webview-loading-error"]
 
+= Troubleshooting Webview loading error
+
 pass:[<!-- vale RedHat.Spelling = NO -->]
-= Troubleshooting webview loading error
 
 If you use Microsoft Visual Studio Code - Open Source in a private browsing window, you might encounter the following error message: *Error loading webview: Error: Could not register service workers*.
 
