--- a/modules/end-user-guide/partials/proc_automating-installation-of-microsoft-visual-studio-code-extensions-at-workspace-startup.adoc
+++ b/modules/end-user-guide/partials/proc_automating-installation-of-microsoft-visual-studio-code-extensions-at-workspace-startup.adoc
@@ -39,9 +39,9 @@ https://www.open-vsx.org/extension/__<publisher>__/__<extension>__
 ----
   {
     "recommendations": [
-      "__<publisher_A.extension_B>__",
-      "__<publisher_C.extension_D>__",
-      "__<publisher_E.extension_F>__"
+      "__<publisher_A>__.__<extension_B>__",
+      "__<publisher_C>__.__<extension_D>__",
+      "__<publisher_E>__.__<extension_F>__"
     ]
   }
 ----
