docs: Rewriting pages about editors (#2552)
* initial changes

* fix: rewriting the IDE-related pages

* edit 'Adding or removing extensions in the embedded Open VSX registry instance'

* rewrite the assembly and remove the outdated concept module

* new edits

* further edits

* fix: typo

* remove the mention of the editorconfig file

* Update modules/end-user-guide/pages/url-parameter-for-the-cloud-ide.adoc

Co-authored-by: Mario Loriedo <mario.loriedo@gmail.com>

* Update modules/end-user-guide/pages/url-parameter-for-the-cloud-ide.adoc

Co-authored-by: Mario Loriedo <mario.loriedo@gmail.com>

* initial changes in response to Mario's feedback

* work in progress

* remove 'cloud' from IDE

* add an admonition requested by Mario

* incorporate new feedback from Artem

* Restarting the jobs

* Add 'Restart Workspace from Local Devfile' command to the corresponding section

Co-authored-by: Max Leonov <mleonov@redhat.com>

* rewrite of the vsx-related procedure due to changes in vsx.org

* Update modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc

* edit proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc

* Apply suggestions from code review

* Update modules/end-user-guide/pages/defining-a-common-ide.adoc

* Update modules/end-user-guide/pages/url-parameter-for-the-ide.adoc

* Update modules/end-user-guide/pages/ides-in-workspaces.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Apply suggestions from code review

* minor edit

* another minor edit

* another minor edit

* another minor edit

* another minor edit

* another minor edit

* another minor edit

* minor edit

* minor edit

* minor edit

* apply changes requested in https://github.com/eclipse-che/che-docs/pull/2552#discussion_r1133966015

* manually apply suggestion from code review

* minor edit

* test rearranging the steps due to the snippet file

* rearrang

--- a/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
@@ -1,7 +1,17 @@
 [id="parameters-for-che-editor-yaml"]
 = Parameters for che-editor.yaml
 
-The simplest way to select an IDE in the `che-editor.yaml` is to specify the `id` of an IDE that is available in the table of supported in-browser IDEs in xref:selecting-a-workspace-ide.adoc[]:
+The simplest way to select an IDE in the `che-editor.yaml` is to specify the `id` of an IDE from the table of supported IDEs:
+
+.Supported IDEs
+[cols="1,1a,1a"]
+|===
+| IDE | `id` | Note
+
+include::example$snip_{project-context}-table-of-supported-editors.adoc[]
+
+|===
+
 
 .`id` selects an IDE from the plugin registry
 ====
