--- a/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -15,43 +15,58 @@ pass:[<!-- vale RedHat.TermsErrors = YES -->]
 
 .Procedure
 
+. Get the publisher and extension names of each chosen extension:
+
+.. Find the extension on the link:https://www.open-vsx.org/[Open VSX registry website] and copy the URL of the extension's listing page.
+
+.. Extract the __<publisher>__ and __<extension>__ names from the copied URL:
++
+[subs="+quotes"]
+----
+https://www.open-vsx.org/extension/__<publisher>__/__<extension>__
+----
++
+[TIP]
+====
+
+If the extension is only available from link:https://marketplace.visualstudio.com/VSCode[Microsoft Visual Studio Marketplace], but not link:https://open-vsx.org[Open VSX], you can ask the extension publisher to also publish it on link:https://open-vsx.org[open-vsx.org] according to these link:https://github.com/eclipse/openvsx/wiki/Publishing-Extensions#how-to-publish-an-extension[instructions], potentially using this link:https://github.com/marketplace/actions/publish-vs-code-extension[GitHub action].
+
+If the extension publisher is unavailable or unwilling to publish the extension to link:https://open-vsx.org[open-vsx.org], and if there is no Open VSX equivalent of the extension, consider link:https://github.com/open-vsx/publish-extensions/issues[reporting an issue] to the Open VSX team.
+
+====
+
 include::example$snip_{project-context}-steps-to-add-or-remove-extensions-in-openvsx-sync-json.adoc[]
 
-** If the extension is published on link:https://open-vsx.org[open-vsx.org], you can add its extension `id` in the format __<published_by>__.__<unique_identifier>__. You can find the `id` details on the extension's listing page on link:https://open-vsx.org[open-vsx.org].
+** To add extensions, add the publisher and extension names to the `openvsx-sync.json` file.
+** To remove extensions, remove the publisher and extension names from the `openvsx-sync.json` file.
+** Use the following JSON syntax:
 +
 [source,json,subs="+quotes"]
 ----
     {
-        "id": "__<published_by>__.__<unique_identifier>__"
+        "id": "__<publisher>__.__<extension>__"
     }
 ----
 +
 [TIP]
 ====
-The latest extension version on link:https://open-vsx.org[open-vsx.org] is the default. Alternatively, you can add `"version": "__<extension_version>__"` on a new line to specify a version.
-====
 
-** If the extension is only available from link:https://marketplace.visualstudio.com/VSCode[Microsoft Visual Studio Marketplace], but not link:https://open-vsx.org[Open VSX], you can ask the extension publisher to also publish it on link:https://open-vsx.org[open-vsx.org] according to these link:https://github.com/eclipse/openvsx/wiki/Publishing-Extensions#how-to-publish-an-extension[instructions], potentially using this link:https://github.com/marketplace/actions/publish-vs-code-extension[GitHub action].
-+
-[TIP]
-====
-* If the extension publisher is unavailable or unwilling to publish the extension to link:https://open-vsx.org[open-vsx.org], and if there is no Open VSX equivalent of the extension, consider link:https://github.com/open-vsx/publish-extensions/issues[reporting an issue] to the Open VSX team.
+* The latest extension version on link:https://open-vsx.org[open-vsx.org] is the default. Alternatively, you can add `"version": "__<extension_version>__"` on a new line to specify a version.
 
-* If you have a closed-source extension or an extension developed only for internal use in your company, you can add the extension directly from a `.vsix` file by using a URL accessible to your custom plugin registry container:
+* If you have a closed-source extension or an extension developed only for internal use in your organization, you can add the extension directly from a `.vsix` file by using a URL accessible to your custom plugin registry container:
 +
 [source,json,subs="+quotes"]
 ----
     {
-        "id": "__<published_by>__.__<unique_identifier>__",
+        "id": "__<publisher>__.__<extension>__",
         "download": "__<url_to_download_vsix_file>__",
         "version": "__<extension_version>__"
     }
 ----
-====
-+
-WARNING: Please read the link:https://aka.ms/vsmarketplace-ToU[Terms of Use] for the link:https://marketplace.visualstudio.com/VSCode[Microsoft Visual Studio Marketplace] before using its resources.
 
-** You can remove the extension by deleting it from the `openvsx-sync.json` file.
+* Read the link:https://aka.ms/vsmarketplace-ToU[Terms of Use] for the link:https://marketplace.visualstudio.com/VSCode[Microsoft Visual Studio Marketplace] before using its resources.
+
+====
 
 . Build the plugin registry container image and publish it to a container registry like link:https://quay.io/[quay.io]:
 
@@ -69,7 +84,7 @@ $ ./build.sh -o __<username>__ -r quay.io -t custom
 $ {docker-cli} push quay.io/__<username/plugin_registry:custom>__
 ----
 
-. Edit the `CheCluster` custom resource in your organization's cluster to point to the image (for example, on link:https://quay.io/[quay.io]) and then save the changes:
+. Edit the `CheCluster` custom resource in your organization's cluster to point to the image (for example, on link:https://quay.io/[quay.io]) and save the changes:
 +
 [source,yaml,subs="+quotes"]
 ----
@@ -81,6 +96,8 @@ spec:
           - image: quay.io/__<username/plugin_registry:custom>__
       openVSXURL: '' 
 ----
+
+.Verification
 
 . Check that the `plugin-registry` pod has restarted and is running.
 
