--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -10,7 +10,7 @@
 ** xref:starting-a-new-workspace-from-a-devfile-url.adoc[]
 ** xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[]
 *** xref:url-parameter-concatenation.adoc[]
-*** xref:url-parameter-for-the-workspace-ide.adoc[]
+*** xref:url-parameter-for-the-ide.adoc[]
 *** xref:url-parameter-for-starting-duplicate-workspaces.adoc[]
 *** xref:url-parameter-for-the-devfile-file-name.adoc[]
 *** xref:url-parameter-for-the-devfile-file-path.adoc[]
@@ -20,9 +20,9 @@
 ** xref:authenticating-to-a-git-server-from-a-workspace.adoc[]
 * xref:customizing-workspace-components.adoc[]
 * xref:devfile-introduction.adoc[]
-* xref:selecting-a-workspace-ide.adoc[]
-** xref:selecting-an-in-browser-ide-for-one-new-workspace.adoc[]
-** xref:selecting-an-in-browser-ide-for-all-workspaces-that-clone-the-same-git-repository.adoc[]
+* xref:ides-in-workspaces.adoc[]
+** xref:defining-a-common-ide.adoc[]
+** xref:microsoft-visual-studio-code-open-source-ide.adoc[]
 * xref:using-credentials-and-configurations-in-workspaces.adoc[]
 ** xref:mounting-secrets.adoc[]
 *** xref:creating-image-pull-secrets.adoc[]
