--- a/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
+++ b/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
@@ -19,6 +19,7 @@ You can automate installation of Microsoft Visual Studio Code extensions from th
 * Use *{prod2}* commands by clicking *{prod2}* in the link:https://code.visualstudio.com/api/ux-guidelines/status-bar[Status Bar] or finding them through the link:https://code.visualstudio.com/api/ux-guidelines/command-palette[Command Palette]:
 
 ** *{prod2}: Open Dashboard*
+** *{prod2}: Open OpenShift Console*
 ** *{prod2}: Stop Workspace*
 ** *{prod2}: Restart Workspace*
 ** *{prod2}: Restart Workspace from Local Devfile*
