--- a/modules/administration-guide/pages/preparing-the-installation.adoc
+++ b/modules/administration-guide/pages/preparing-the-installation.adoc
@@ -7,9 +7,10 @@
 [id="preparing-the-installation"]
 = Preparing the installation
 
-To prepare a {prod-short} installation, learn about {prod-short} ecosystem and deployment constraints:
+To prepare a {prod-short} installation, learn about the {prod-short} ecosystem and deployment constraints:
 
-** xref:supported-platforms.adoc[]
-** xref:architecture-overview.adoc[]
-** xref:calculating-che-resource-requirements.adoc[]
-** xref:understanding-the-checluster-custom-resource.adoc[]
+* xref:supported-platforms.adoc[]
+* xref:installing-the-chectl-management-tool.adoc[]
+* xref:architecture-overview.adoc[]
+* xref:calculating-che-resource-requirements.adoc[]
+* xref:understanding-the-checluster-custom-resource.adoc[]
