--- a/modules/administration-guide/examples/snip_che-installing-che.adoc
+++ b/modules/administration-guide/examples/snip_che-installing-che.adoc
@@ -6,11 +6,10 @@ The installation method depends on the target platform and the environment restr
 
 * link:https://www.eclipse.org/che/docs/che-7/hosted-che/hosted-che/[{prod-short} hosted by RedHat]
 
-.Installing {prod-short} in cloud
+.Installing {prod-short} in the cloud
 
 You can deploy only one instance of {prod-short} per cluster.
 
-* xref:installing-the-chectl-management-tool.adoc[]
 * xref:installing-che-on-openshift-using-cli.adoc[]
 * xref:installing-che-on-openshift-using-the-web-console.adoc[]
 * xref:installing-che-in-a-restricted-environment.adoc[]
@@ -20,7 +19,6 @@ You can deploy only one instance of {prod-short} per cluster.
 
 Single-node clusters are suited only for testing or development. Do *not* use such clusters to run {prod-short} for organizations or developer teams.
 
-* xref:installing-the-chectl-management-tool.adoc[]
 * xref:installing-che-on-red-hat-openshift-local.adoc[]
 * xref:installing-che-on-minikube.adoc[]
 
