bypass the RedHat.Spelling WARNING that blocks the Linting with Vale PR check

--- a/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
@@ -42,7 +42,11 @@ TIP: See https://docs.openshift.com/container-platform/4.10/operators/user/olm-c
 
 .Verification
 
+pass:[<!-- vale RedHat.Spelling = NO -->]
+
 . In *{prod} instance Specification*, go to *devspaces* to land on the *Details* tab.
+
+pass:[<!-- vale RedHat.Spelling = YES -->]
 
 . Under *Message*, check that there is *None*, which means no errors.
 
