--- a/modules/administration-guide/pages/installing-the-chectl-management-tool.adoc
+++ b/modules/administration-guide/pages/installing-the-chectl-management-tool.adoc
@@ -6,7 +6,7 @@
 
 
 [id="installing-the-{prod-cli}-management-tool"]
-= Install the {prod-cli} management tool
+= Installing the {prod-cli} management tool
 
 
 You can install `{prod-cli}`, the {prod} command-line management tool, on Microsoft Windows, Apple MacOS, and Linux. With `{prod-cli}`, you can perform operations the {prod-short} server such as starting, stopping, updating, and deleting the server.
