minor formatting fix

--- a/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
@@ -19,10 +19,10 @@ If you have trouble xref:installing-che-on-openshift-using-cli.adoc[installing {
 
 .Procedure
 
-. In the *Administrator* view of the OpenShift web console, go to *Operators* -> *OperatorHub* and search for *{prod}*.
+. In the *Administrator* view of the OpenShift web console, go to *Operators* -> *OperatorHub* and search for `{prod}`.
 
 . Install the {prod} Operator.
-
++
 TIP: See link:https://docs.openshift.com/container-platform/{ocp4-ver}/operators/admin/olm-adding-operators-to-cluster.html#olm-installing-from-operatorhub-using-web-console_olm-adding-operators-to-a-cluster[Installing from OperatorHub using the web console].
 
 . Create the `{prod-namespace}` project in OpenShift as follows:
