--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -88,10 +88,10 @@ When this section is empty, {prod-short} only loads the implicit components.
 
 . Sum up the resources required for each workspace, and multiply them by the running workspaces count.
 
-. Sum up the server components requirements.
+. Sum up the requirements for the {prod-short} Operator, Operands, and {devworkspace} Controller
 +
 [cols="1a,1a,1a,1a,1a,1a,1a",options="header"]
-.{prod-short} server components default requirements
+.Default requirements for the {prod-short} Operator, Operands, and {devworkspace} Controller
 |===
 |Purpose
 |Pod name
@@ -115,7 +115,7 @@ When this section is empty, {prod-short} only loads the implicit components.
 |1 Gi
 |512 MiB
 |1
-|1 m
+|100 m
 
 |{prod-short} Dashboard
 |`{prod-id-short}-dashboard`
@@ -193,7 +193,7 @@ When this section is empty, {prod-short} only loads the implicit components.
 |`{devworkspace-id}-webhook-server`
 |`webhook-server`
 |300 MiB
-|29 MiB
+|20 MiB
 |200 m
 |100 m
 
@@ -222,9 +222,9 @@ When this section is empty, {prod-short} only loads the implicit components.
 |N/A
 
 3+>s|Total
->s|8.5 GiB
->s|1.1 GiB
+>s|9 GiB
+>s|1.2 GiB
 >s|6.9
->s|2.21
+>s|1.3
 
 |===
