--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -112,7 +112,7 @@ When this section is empty, {prod-short} only loads the implicit components.
 |{prod-short} Server
 |`{prod-id-short}`
 |`{prod-id-short}-server`
-|1 Gi
+|1 GiB
 |512 MiB
 |1
 |100 m
@@ -160,16 +160,16 @@ When this section is empty, {prod-short} only loads the implicit components.
 |Devfile registry
 |`devfile-registry`
 |`devfile-registry`
-|256 Mi
-|32 Mi
+|256 MiB
+|32 MiB
 |500 m
 |100 m
 
 |Plugin registry
 |`plugin-registry`
 |`plugin-registry`
-|256 Mi
-|32 Mi
+|256 MiB
+|32 MiB
 |500 m
 |100 m
 
@@ -178,7 +178,7 @@ When this section is empty, {prod-short} only loads the implicit components.
 |`{devworkspace-id}-controller`
 |1 GiB
 |100 MiB
-|1
+|1000m
 |250 m
 
 |{devworkspace} Controller Manager
