fix: Update resource requirements for Eclipse Che Operator, Operands, … (#2576)
* fix: Update resource requirments for Eclipse Che Operator, Operands, and Dev Workspace Controller

Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

* fixup! using 'Mib' / 'GiB' for consistency

Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

* fixup! formatting

Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

* Update modules/administration-guide/pages/calculating-che-resource-requirements.adoc

---------

Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>
Co-authored-by: Max Leonov <mleonov@redhat.com>

--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -88,10 +88,10 @@ When this section is empty, {prod-short} only loads the implicit components.
 
 . Sum up the resources required for each workspace, and multiply them by the running workspaces count.
 
-. Sum up the server components requirements.
+. Sum up the requirements for the {prod-short} Operator, Operands, and {devworkspace} Controller
 +
 [cols="1a,1a,1a,1a,1a,1a,1a",options="header"]
-.{prod-short} server components default requirements
+.Default requirements for the {prod-short} Operator, Operands, and {devworkspace} Controller
 |===
 |Purpose
 |Pod name
@@ -112,10 +112,10 @@ When this section is empty, {prod-short} only loads the implicit components.
 |{prod-short} Server
 |`{prod-id-short}`
 |`{prod-id-short}-server`
-|1 Gi
+|1 GiB
 |512 MiB
 |1
-|1 m
+|100 m
 
 |{prod-short} Dashboard
 |`{prod-id-short}-dashboard`
@@ -160,16 +160,16 @@ When this section is empty, {prod-short} only loads the implicit components.
 |Devfile registry
 |`devfile-registry`
 |`devfile-registry`
-|256 Mi
-|32 Mi
+|256 MiB
+|32 MiB
 |500 m
 |100 m
 
 |Plugin registry
 |`plugin-registry`
 |`plugin-registry`
-|256 Mi
-|32 Mi
+|256 MiB
+|32 MiB
 |500 m
 |100 m
 
@@ -201,7 +201,7 @@ When this section is empty, {prod-short} only loads the implicit components.
 |`{devworkspace-id}-webhook-server`
 |`webhook-server`
 |300 MiB
-|29 MiB
+|20 MiB
 |200 m
 |100 m
 
@@ -230,9 +230,9 @@ When this section is empty, {prod-short} only loads the implicit components.
 |N/A
 
 3+>s|Total
->s|9.5 GiB
->s|1.6 GiB
->s|7.4
->s|2.31
+>s|9 GiB
+>s|1.2 GiB
+>s|6.9
+>s|1.3
 
 |===
